Only keep the python package. Refer to the original heremaps package in the README.md Add a HERE polyline support.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-rust/target
-**/*.rs.bk
-rust/Cargo.lock
-cpp/build
-[Bb]in
-[Dd]ebug*/
-obj/
-*.suo
-.idea
-.vs
-
-*.user
-*.class
+_env/
+__pycache__/
+*.pyc
+build/
+dist/
+*.egg-info/
+.eggs/
+_env*
+LICENSE
