--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,13 @@
 name = here-polyline-converter
 version = 0.2.0
 description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
+long-description = file: README.md
 author = HERE Europe B.V.
+home-page = https://github.com/heremaps/python-flexpolyline-pbapi
 url = https://here.com
-license = MIT
+license_files =
+    LICENSE
+platform = any
 classifiers =
     Intended Audience :: Developers
     Programming Language :: Python :: 3 :: Only
@@ -20,7 +24,7 @@ zip_safe = False
 python_requires = >=3.6
 package_dir =
     = src
-install_requires = file: requirements.txt
+install_requires = flexpolyline
 
 [options.packages.find]
 where = src
