--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,43 +5,29 @@ name: Python package
 
 on:
   push:
-    branches: '*'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
+  build:
 
-  test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        #os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9"]
-        #python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .
-          pip install -r requirements_dev.txt
-
-      - name: Test
-        run: |
-          pytest -v --cov=src tests --cov-report=xml
-
-      - name: Upload to Codecov
-        if: github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.9'
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./coverage.xml
-          flags: unittests
-          verbose: true
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pytest
+    - name: Test with pytest
+      run: |
+        pytest
