--- a/.ort.yml
+++ b/.ort.yml
@@ -1,5 +1,8 @@
 excludes:
   paths:
+    - pattern: "requirements_dev.txt"
+      reason: "BUILD_TOOL_OF"
+      comment: "Optional dependencies only used for development / testing."
     - pattern: "tests/**"
       reason: "TEST_OF"
       comment: "Directory only used for testing."
