Update source files headers + setup.cfg to comply with HERE OSS policy Signed-off-by: Emmanuel Decitre <emmanuel.decitre@here.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,20 @@
 [metadata]
 name = here-polyline-converter
 version = 0.2.0
-description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
-long-description = file: README.md
-author = HERE Europe B.V.
-home-page = https://github.com/heremaps/python-flexpolyline-pbapi
+author = HERE Global B.V. and its affiliate(s)
+author_email = emmanuel.decitre@here.com
 url = https://here.com
+home-page = https://github.com/heremaps/python-flexpolyline-pbapi
+description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = The MIT License
 license_files =
     LICENSE
+keywords = HERE, Search, Polyline, GS7
 platform = any
 classifiers =
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
