Remove unnecessary artifacts and adapt setup.cfg to comply with HERE OSS policy
Signed-off-by: Emmanuel Decitre <emmanuel.decitre@here.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.2.0
 author = HERE Global B.V. and its affiliate(s)
 author_email = emmanuel.decitre@here.com
 url = https://here.com
-home-page = https://github.com/heremaps/python-flexpolyline-pbapi
+home-page = home-page = https://github.com/heremaps/here-polyline-converter
 description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
 long_description = file: README.md
 long_description_content_type = text/markdown
