Adapt setup.cfg author field
Signed-off-by: Emmanuel Decitre <emmanuel.decitre@here.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = here-polyline-converter
 version = 0.2.0
-author = HERE Global B.V. and its affiliate(s)
+author = HERE Europe B.V.
 author_email = emmanuel.decitre@here.com
 url = https://here.com
 home-page = home-page = https://github.com/heremaps/here-polyline-converter
