Upadate release.yml
Signed-off-by: Emmanuel Decitre <emmanuel.decitre@here.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = here-polyline-converter
-version = 0.2.0
+version = 0.2.1
 author = HERE Europe B.V.
 author_email = emmanuel.decitre@here.com
 url = https://here.com
-home-page = home-page = https://github.com/heremaps/here-polyline-converter
+home_page = https://github.com/heremaps/here-polyline-converter
 description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -22,6 +22,9 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: MIT License
+project_urls =
+    Bug Tracker = https://github.com/heremaps/here-polyline-converter/issues
+    Source = https://github.com/heremaps/here-polyline-converter
 
 [options]
 zip_safe = False
